# SudokuCompanionToolkit-v3

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-train.txt  requirements.txt  resize_banner_models.ps1  sudoku_tools.py  types_sudoku.py
.github/workflows/: android.yml  models.yml
README/: Github.txt
apps/api/: sudoku_tool_api.py
apps/cli/: animate_gif.py  animate_mp4.py  demo_cli.py  demo_cli_overlay.py  overlay_renderer.py  storyboard_sheet.py
assets/amazon_keywords/: CA Cerebro - Best Seller - Coloring Book - Ranked 1 to 40.xlsx  DE Cerebro - Best seller - 6000 word search - ranked 1 to 40.xlsx  DE Cerebro - Sudoku.xlsx  ES Cerebro - Best Seller - Mixed puzzle book - Ranked 1 to 40.xlsx  ES Cerebro - Best Seller - Sopa de letras para mayores - Ranked 1 to 40.xlsx  ES Cerebro - Best Seller - Sudoku 1 - Ranked 1 to 40.xlsx  FR Cerebro - Best seller - 1000 Sudoku - ranked 1 to 40.xlsx  FR Cerebro - Best seller - 5000 word search - ranked 1 to 40.xlsx  UK Cerebro - Best Seller - Mindfulness Patterns - Ranked 1 to 40.xlsx  UK Cerebro - Best Seller - Sudoku 6 by 9 - Ranked 1 to 40.xlsx  UK Cerebro - Best seller - 9000 words Martin Littlewolf - ranked 1 to 40.xlsx  US Cerebro - Best Seller - Jade Summer Animal Coloring Book - Ranked 1 to 40.xlsx  US Cerebro - Best Seller - Mindfulness Patterns - Ranked 1 to 40.xlsx  US Cerebro - Best Seller - Novapuzzles - Ranked 1 to 40.xlsx  US Cerebro - Best Seller - Seniortasse Sudoku - Ranked 1 to 40.xlsx  US Cerebro - Best Seller - Spanish Word Search - Ranked 1 to 40.csv  US Cerebro - Best seller - Extreme Sudoku Brain Games - Ranked 1 to 20.xlsx  US Cerebro - Best seller - Word Search 4000 My Brain Is Busy - Ranked 1 to 10.xlsx  US Cerebro - Best seller - Word Search 5000 Martin Littlewolf - Ranked 1 to 10.xlsx  US Cerebro - Best seller - Word Search 5000 Seniortasse - Ranked 1 to 10.xlsx  US Cerebro - Best seller - Word Search Swirl Spiral Bound - Ranked 1 to 10.xlsx
docs/: Playbook - Step by step Solutions.docx  annotation_report.json  llm_system_prompt.md  type_annotation_report.json
docs/site/: apps.html  search.js  solver.html
mobile/android/: android_tflite_stub.kt
mobile/ios/: ios_coreml_stub.swift
python/: opencv_rectify.py  requirements-api.txt  requirements-docs.txt
python/3,2/: all_preds.csv  meta.json
python/SudokuParser/: Readme.txt  SudokuParser2.py  SudokuParser21.py  SudokuParser2_answers_only.py  SudokuParser2_old.py  SudokuParser_DE.py
python/artifacts/: cell_cnn28_probs.ptl  compare_tilesets.py  probe_csv_vs_phone.py
python/docs/: HOWTO_Annotations.md  Master Guide - Sudoku Companion Toolkit.docx  TRAINING_README.md
python/mobile/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  warp_tiler.cpp
python/publishing/: README.md  __init__.py
python/solver/: solver_core.py  sudoku_tools.py
python/step-by-step_solutions/: 1234.xlsx  12AS25_Hard_1.xlsx  12AS25_Hard_1_user_logs.xlsx  12ATH_Hard_1.xlsx  12ATH_Hard_1_user_logs.xlsx  16AS25_Hard_1.xlsx  16AS25_Hard_1_user_logs.xlsx  1ATH_Hard_1.xlsx  1ATH_Hard_1_user_logs.xlsx  21AS25_Hard_1.xlsx  21AS25_Hard_1_user_logs.xlsx  21ATH_Hard_1.xlsx  21ATH_Hard_1_user_logs.xlsx  2AS25_Hard_1.xlsx  2AS25_Hard_1_user_logs.xlsx  6ATH_Hard_1.xlsx  6ATH_Hard_1_user_logs.xlsx  7AS25_Hard_1.xlsx  7AS25_Hard_1_user_logs.xlsx  Boxed-triplets-1_user_logs.xlsx  Boxed-triplets-2_user_logs.xlsx  boxed-rays-1.xlsx  (+68 more)
solver/: solver_core.py  sudoku_tools.py  technique_glossary.json
tests/: Test_payload_schema.py  Test_solver_basics.py  conftest.py
tools/: annotate_docstrings.py  annotate_types.py  build_docs.py  collect_digits96.py  conversation_quality.py  extract_cover_panels.py  label_corners.py  quality.ps1  rectify_parity_check.py  run_demo.ps1  split_jsonl.py  sudoku_synth_generator.py  telemetry_phase4_check.py  telemetry_validator.py
yolo/: sudoku_grid.yaml
(+28076 files in other folders)
