[project]
name = "sudoku-companion"
version = "0.1.0"
requires-python = ">=3.10,<3.14"  # you're on 3.13; this keeps CI portable

[tool.ruff]
extend-exclude = ["docs", "demo_export", ".venv"]
line-length = 100

[tool.ruff.lint]
select = ["E","F","W","I","UP","D"]  # errors, imports, pyupgrade, docstrings
ignore = [
  "D100","D104","D401"  # relax some docstring rules (module/main-line/imperative)
]
# Optional: per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # don't require docstrings in tests

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
exclude = "^(docs|demo_export|.venv)/"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]